Menambahkan About Us

--- a/index.html
+++ b/index.html
@@ -51,6 +51,24 @@
     <!-- Main -->
     <div class="main">
       <div class="container">
+        <div id="about-us">
+          <div class="about-tittle">
+            <h1>About Us</h1>
+            <hr />
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae quasi consequatur odit quibusdam atque a mollitia ipsa facilis velit, ducimus temporibus excepturi illum, quod deserunt eos doloremque sequi porro. Sed eveniet
+              magni adipisci reiciendis neque non iusto expedita consequuntur id.
+            </p>
+          </div>
+          <div class="about-image"></div>
+        </div>
+        <hr class="line-hero" />
+        <div class="about-image-content">
+          <div class="content-1"></div>
+          <div class="content-2"></div>
+          <div class="content-3"></div>
+          <div class="content-4"></div>
+        </div>
         <!-- Lanjut Disini -->
       </div>
     </div>
