--- a/index.html
+++ b/index.html
@@ -71,7 +71,45 @@
           
         </div>
         <!-- Lanjut Disini -->
+        <div class="contents">
+          <h3 class="section-title">Products</h3>
+          <p>Women</p>
+          <div class="contents-item">
+            <img src="https://i.pinimg.com/originals/da/c6/44/dac644309cf46fa8612233242dae3021.jpg" alt="Flower-Dress">
+            <p>Dress</p>
+          </div>
+          <div class="contents-item">
+            <img src="https://img-9gag-fun.9cache.com/photo/aDd7QzG_460s.jpg" alt="Black-Stiletto">
+            <p>Pumps</p>
+          </div>
+          <div class="contents-item">
+            <img src="https://pics.wikifeet.com/Anya-Taylor-Joy-Feet-5764138.jpg" alt="Red-Handbag">
+            <p>Handbags</p>
+          </div>
+          <div class="contents-item">
+            <img src="https://www4.pictures.stylebistro.com/gi/Chanel+Outside+Arrivals+Paris+Fashion+Week+7JLMOA6hw7bl.jpg" alt="Earings-&-Rings">
+            <p>Jewellery</p>
+          </div>
+          <p>Men</p>
+          <div class="contents-item">
+            <img src="https://i.pinimg.com/474x/7a/65/ab/7a65ab0b98182f6d33c5858980aa2e99.jpg" alt="Suit">
+            <p>Suit and Blazers</p>
+          </div>
+          <div class="contents-item">
+            <img src="https://78.media.tumblr.com/65884d22459232cf885d12710ddae7e9/tumblr_p3fcwkLMqN1v0t5cvo2_1280.png" alt="Lace-Ups">
+            <p>Lace-Ups</p>
+          </div>
+          <div class="contents-item">
+            <img src="https://i.pinimg.com/originals/33/1d/61/331d61bc280e90be0929c2e2acf5e91a.jpg" alt="Sunglasses">
+            <p>Sunglasses</p>
+          </div>
+          <div class="contents-item">
+            <img src="https://64.media.tumblr.com/3a1f65b0461d0b730ca34b007b9f8892/ccbed55f58162309-c3/s540x810/5f1ca7ce78c0c1511ae734c01364227ba2a6e9dd.jpg" alt="Wrist-Watch">
+            <p>Watches</p>
+          </div>
+        </div>
       </div>
+      
     </div>
     <!-- Akhir Main -->
   </body>
