--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           <p>Women</p>
           <div class="contents-item">
             <img src="https://i.pinimg.com/originals/da/c6/44/dac644309cf46fa8612233242dae3021.jpg" alt="Flower-Dress">
-            <p>Dress</p>
+            <p>Dresses</p>
           </div>
           <div class="contents-item">
             <img src="https://img-9gag-fun.9cache.com/photo/aDd7QzG_460s.jpg" alt="Black-Stiletto">
@@ -93,7 +93,7 @@
           <p>Men</p>
           <div class="contents-item">
             <img src="https://i.pinimg.com/474x/7a/65/ab/7a65ab0b98182f6d33c5858980aa2e99.jpg" alt="Suit">
-            <p>Suit and Blazers</p>
+            <p>Suits and Blazers</p>
           </div>
           <div class="contents-item">
             <img src="https://78.media.tumblr.com/65884d22459232cf885d12710ddae7e9/tumblr_p3fcwkLMqN1v0t5cvo2_1280.png" alt="Lace-Ups">
