menambahkan id pada nav

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <!-- Navbar -->
-    <nav>
+    <nav id="home">
       <div class="container">
         <div class="navbar-logo">
           <h1>
