--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       </div>
     </div>
     
-    <!--Bagian Awal Contact Us-->
+    <!--Bagian Awal Code Contact Us-->
       <div class="contactUs">
         <div class="title">
             <h2>Contact Us</h2>
@@ -159,7 +159,7 @@
     </div>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-    <!--Bagian Akhir Contact Us-->
+    <!--Bagian Akhir Code Contact Us-->
     
   </body>
 </html>
